2013-08-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-rescale-image): Use ImageMagick even for GIFs
	now that Emacs supports ImageMagick animations.

2013-08-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cmds.el (top): Don't declare `buffer-name'.
	(tramp-append-tramp-buffers): Rewrite buffer local variables part.

2013-08-16  Martin Rudalics  <rudalics@gmx.at>

	* window.el (mouse-autoselect-window-select): Do autoselect when
	mouse pointer is on margin.

2013-08-16  William Parsons  <wbparsons@alum.mit.edu>  (tiny change)

	* net/ange-ftp.el (ange-ftp-skip-msgs): Add 500 EPSV.  (Bug#1972)

2013-08-16  Glenn Morris  <rgm@gnu.org>

	* net/ange-ftp.el (ange-ftp-good-msgs, ange-ftp-get-pwd):
	Handle "Remote Directory" response of some clients.  (Bug#15058)

	* emacs-lisp/bytecomp.el (byte-compile-make-variable-buffer-local):
	Tweak warning.  (Bug#14926)

	* menu-bar.el (send-mail-item-name, read-mail-item-name): Remove.
	(menu-bar-tools-menu): Simplify news and mail items.  (Bug#15095)

	* image-mode.el (image-mode-map): Add menu items to reverse,
	increase, decrease, reset animation speed.
	(image--set-speed, image-increase-speed, image-decrease-speed)
	(image-reverse-speed, image-reset-speed): New functions.
	(image-mode-map): Add bindings for speed commands.

	* image.el (image-animate-get-speed, image-animate-set-speed):
	New functions.
	(image-animate-timeout): Respect image :speed property.

2013-08-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/debug.el (debugger-setup-buffer): Put point on the
	previous line (bug#15101).
	(debugger-eval-expression, debugger-record-expression):
	Use read--expression (bug#15102).

2013-08-15  Michael Albinus  <michael.albinus@gmx.de>

	Remove byte compiler warnings, visible when compiling with
	`byte-compile-force-lexical-warnings' set to t.

	* net/tramp.el (tramp-debug-message, tramp-message, tramp-error)
	(tramp-error-with-buffer): Rename ARGS to ARGUMENTS and BUFFER to BUF.