@@ -31,9 +31,8 @@
 (require 'tramp)
 
 ;; Pacify byte-compiler.
-(eval-when-compile
-  (defvar reporter-eval-buffer)
-  (defvar reporter-prompt-for-summary-p))
+(defvar reporter-eval-buffer)
+(defvar reporter-prompt-for-summary-p)
 
 (defun tramp-list-tramp-buffers ()
   "Return a list of all Tramp connection buffers."
